<resources>
    <string name="app_name">SureHealth</string>
    <!--    a-->
    <string name="beranda">Beranda</string>
    <string name="deskripsi">Silahkan lakukan test untuk mengetahui apa yang sedang kamu alami</string>
    <string name="pertanyaan">Ingin mencari tahu hasil gejala mu?</string>
    <string name="nama_user">Nama User</string>
    <string name="salam">Halo,</string>
    <string name="kuisioner">Kuisioner</string>
    <string name="peringatan_quiz">Jawablah pertanyaan-pertanyaan di bawah ini sesuai dengan gejala yang kalian alami!</string>
    <string name="tanggal">Tanggal</string>
    <string name="hasil">Hasil</string>
    <string name="waktu">Waktu</string>
    <string name="tingkat_keparahan">Tingkat Keparahan</string>
    <string name="hapus">Hapus</string>
    <string name="riwayat">Riwayat</string>
    <string name="pertanyaan_1">Apakah Anda mengalami demam?</string>
    <string name="kembali">Kembali</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="riwayat_tes">Riwayat Tes</string>
    <string name="mulai_tes">Mulai Tes</string>
    <string name="menu">Menu</string>
    <string name="keluar">Keluar</string>
    <string name="app_logo">App Logo</string>

    <!-- Pertanyaan -->
    <string name="question_one">Apakah Anda mengalami demam?</string>
    <string name="question_two">Seberapa sering Anda merasakan lelah?</string>
    <string name="question_three">Apakah Anda merasakan batuk kering?</string>
    <string name="question_four">Seberapa sering Anda batuk?</string>
    <string name="question_five">Apakah Anda mengalami sesak nafas?</string>
    <string name="question_six">Apakah Anda merasakan tenggorokan kering?</string>
    <string name="question_seven">Apakah Anda tidak meraskana gejala apapun?</string>
    <string name="question_eight">Seberapa sering Anda merasakan sakit?</string>
    <string name="question_nine">Apakah Anda merasakan hidung tersumbat?</string>
    <string name="question_ten">Apakah Anda merasakan pilek?</string>
    <string name="question_eleven">Apakah Anda merasakan diare?</string>
    <string name="question_twelve">Seberapa sering Anda melakukan buang air besar?</string>

    <!-- Skala Jawaban -->
    <string name="scale_one">Tidak pernah</string>
    <string name="scale_two">Jarang</string>
    <string name="scale_three">Kadang-kadang</string>
    <string name="scale_four">Cukup sering</string>
    <string name="scale_five">Sangat Sering</string>

    <!--    b-->
    <string name="login">Masuk</string>
    <string name="text_login2">Masukkan Email dan Password Anda!</string>
    <string name="imagelogin">ImageLogin</string>
    <string name="register_text">Belum memiliki akun?</string>
    <string name="register_intent">Buat Akun</string>
    <string name="text_login">Masuk</string>
    <string name="password">Password</string>
    <string name="register">Buat Akun</string>
    <string name="confirmpassword">Konfirmasi Password</string>
    <string name="name">Nama</string>
    <string name="text_regis">Buat Akun</string>
    <string name="text_regis2">Buat akun baru dengan mengisi informasi dibawah ini</string>
    <string name="loginintent_text">Sudah memiliki akun?</string>
    <string name="login_intent">Masuk</string>
    <string name="fill_name">Isikan nama anda</string>
    <string name="fill_email">Isikan email anda</string>
    <string name="fill_password">Isi password dengan benar</string>
    <string name="password_less">Password kurang dari 6 karakter</string>
    <string name="same_password">Password tidak sama</string>
    <string name="email">Email</string>
    <string name="mulai_test">Mulai Test</string>
    <string name="deskripsi_tes">Jawab pertanyaan untuk mendapatkan hasil dari gejala yang dialami</string>
    <string name="deskripsi_riwayat">Hasil dari test yang pernah dilakukan sebelumnya</string>
    <string name="email_already">Email has been registered. Registration failed</string>
    <string name="register_success">Registration succeed</string>
    <string name="descawal">Pastikan gejala yang sedang kamu alami dengan \n SureHealth</string>
    <string name="descakhir">Sudah memiliki akun?</string>
    <string name="imgOnboard">image onboarding</string>
    <string name="not_register">Maaf akun anda tidak terdaftrar</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="simpan">Simpan</string>
    <string name="hapus_akun">Hapus Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting">tes</string>
    <string name="tvKeparahan">Tingkat keparahan gejala</string>
    <string name="Pameter_keparahan">Ringan</string>
    <string name="deskripsi_hasil">Deskripsi</string>
    <string name="deskripsi_hasil2">Minum Obat 3x Sehari, Perbanyak Istirahat</string>
    <string name="Rekomendasi_obat">Rekomendasi Obat</string>
    <string name="Rekomendasi_obat2">Vitamin C, Paracetamol 500mg</string>
    <string name="imghasil">image hasil</string>
    <string name="hijau">parameter hijau</string>
    <string name="kuning">parameter kuning</string>
    <string name="merah">parameter merah</string>
    <string name="panah">panah parameter</string>
    <string name="lanjut">Lanjut</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="first_page">Halaman Pertama</string>
    <string name="second_page">Halaman Kedua</string>
    <string name="warning">Peringatan</string>
    <string name="next">Lanjut</string>
    <string name="back">Kembali</string>
    <string name="look_result">LIHAT HASIL</string>
</resources>