<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.RegisterActivity">

    <ImageView
        android:id="@+id/ivRegis"
        android:layout_width="242dp"
        android:layout_height="171dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/imagelogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imglogin" />

    <TextView
        android:id="@+id/tvRegis"
        android:layout_width="131dp"
        android:layout_height="32dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/text_regis"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRegis" />

    <TextView
        android:id="@+id/tvRegis2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/text_regis2"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegis" />

    <TextView
        android:id="@+id/tvintentLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/loginintent_text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tvintentLogin2"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisButton" />

    <TextView
        android:id="@+id/tvintentLogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="86dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/login_intent"
        android:textColor="@color/dark_green"
        app:layout_constraintEnd_toEndOf="@+id/RegisButton"
        app:layout_constraintTop_toTopOf="@+id/tvintentLogin" />

   <com.capstone.surehealth.ui.customview.EmailEdit
        android:id="@+id/emailedit"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_custom"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:maxLength="16"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameedit" />

    <com.capstone.surehealth.ui.customview.RegisterButton
        android:id="@+id/RegisButton"
        android:layout_width="350dp"
        android:layout_height="41dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/inter_bold"
        android:shadowRadius="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />

    <EditText
        android:id="@+id/nameedit"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:layout_marginTop="25dp"
        android:background="@drawable/et_custom"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:maxLength="16"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegis2" />

    <EditText
        android:id="@+id/passwordEdit"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_custom"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:maxLength="16"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailedit" />

    <EditText
        android:id="@+id/passwordEdit2"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:background="@drawable/et_custom"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/confirmpassword"
        android:importantForAutofill="no"
        android:maxLength="16"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>