<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.OnboardingActivity">


    <Button
        android:id="@+id/RegisOButton"
        android:layout_width="350dp"
        android:layout_height="54dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="31dp"
        android:backgroundTint="@color/light_green"
        android:fontFamily="@font/inter_bold"
        android:shadowRadius="20"
        android:text="@string/register"
        android:textColor="@color/green"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOnboard" />

    <ImageView
        android:id="@+id/ivOnboard"
        android:layout_width="306dp"
        android:layout_height="95dp"
        android:layout_marginTop="212dp"
        android:contentDescription="@string/imgOnboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imgonboard" />

    <TextView
        android:id="@+id/tvOnboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/descawal"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivOnboard" />

    <TextView
        android:id="@+id/tvdescakhir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/descakhir"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/divider3"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/RegisOButton" />

    <View
        android:id="@+id/divider3"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="31dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisOButton" />

    <View
        android:id="@+id/divider2"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="281dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisOButton" />

    <com.capstone.surehealth.ui.customview.LoginButton
        android:id="@+id/loginOButton"
        android:layout_width="350dp"
        android:layout_height="41dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="31dp"
        android:fontFamily="@font/inter_bold"
        android:shadowRadius="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvdescakhir" />

</androidx.constraintlayout.widget.ConstraintLayout>